--- a/public/_connect.scss
+++ b/public/_connect.scss
@@ -25,7 +25,7 @@
       flex-direction: column;
       input,
       textarea {
-        border-radius: 5px;
+        border-radius: 1px;
         font-size: 1em;
         margin-bottom: 50px;
         margin: 10px;
@@ -47,7 +47,7 @@
         background: $secondary;
         border: none;
         color: white;
-        border-radius: 10px;
+        border-radius: 6px;
         font-size: 0.8em;
         cursor: pointer;
         &:hover,
