--- a/public/_skills.scss
+++ b/public/_skills.scss
@@ -32,6 +32,7 @@
         transform: rotate(45deg);
         animation: r 200s infinite linear;
         z-index: 1;
+        background: red;
       }
     }
     .section {
